--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         id: plantuml
         uses: grassedge/generate-plantuml-action@v1.5
         with:
-          path: ./
+          path: .
           message: "Render PlantUML files"
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
