--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,17 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    name: plantuml
     steps:
-      - name: checkout
-        uses: actions/checkout@v4.1.1
+      - uses: actions/checkout@v2
+      - name: generate and commit diagrams
+        uses: abekoh/commit-plantuml-action@1.0.3
         with:
-          fetch-depth: 1
-      - name: plantuml
-        id: plantuml
-        uses: grassedge/generate-plantuml-action@master
-        with:
-          path: example
-          message: "Render PlantUML files"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          botEmail: ${{ secrets.BOT_EMAIL }}
+          botGithubToken: ${{ secrets.GITHUB_TOKEN }}
+          enableReviewComment: true
