--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,7 @@
 name: build
 on:
-  push:
-    paths:
-      - ./flowchart.puml
-    branches: [ main ]
-    tags:
-      - '**'
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
 
 #env:
 #  aaa: bbb
@@ -20,6 +13,9 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
       - name: install plantuml
         run: |
           set -eux
